Finished writing on all pages.

--- a/games.html
+++ b/games.html
@@ -5,15 +5,19 @@
 </head>
 <body>
 
-<a href="index.html">Introduction</a>
-<a href="games.html">Games</a>
-<a href="games.html">Food</a>
+<a href="index.html"><b>Introduction</b></a>
+<a href="games.html"><b>Games</b></a>
+<a href="food.html"><b>Food</b></a>
 
 <h1>My Top 5 Games Ever:</h1>
 <h2>1. Dark Souls</h2>
+<p>Great gameplay, great difficulty, free to go wherever, can see almost everything near the start.</p>
 <h2>2. Nier Automata</h2>
+<p>Great story, good and unique gameplay, great characters, and great music. Is the main inspiration for me wanting to make games.</p>
 <h2>3. Destiny 2: Forsaken</h2>
+<p>Specific time period of Destiny 2. Large amount of content, hidden content, great gameplay, solid story, also when I was one of the best players in the world for PVP.</p>
 <h2>4. Elden Ring</h2>
+<p>Great gameplay, first soulslike open world, decent difficulty.</p>
 <h2>5. Terraria</h2>
-
+<p>Can be relaxing, can be stressful, nice progression system, nice building system, good gameplay. Is not 2D Minecraft.</p>
 </html>
