--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>Andrew's Intro</title>
 </head>
 <body>
-
-<a href="index.html">Introduction</a>
-<a href="games.html">Games</a>
-<a href="games.html">Food</a>
+    
+<a href="index.html"><b>Introduction</b></a>
+<a href="games.html"><b>Games</b></a>
+<a href="food.html"><b>Food</b></a>
 
 <h1>Introduction:</h1>
 
