Fixed errors from HTML Checker. Added language.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Andrew's Intro</title>
 </head>
 <body>
-    
+
 <a href="index.html"><b>Introduction</b></a>
 <a href="games.html"><b>Games</b></a>
 <a href="food.html"><b>Food</b></a>
