Added more unique html elements.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,78 @@
 <head>
 <title>Andrew's Intro</title>
 </head>
+
 <body>
 
-<a href="index.html"><b>Introduction</b></a>
-<a href="games.html"><b>Games</b></a>
-<a href="food.html"><b>Food</b></a>
+    <a href="index.html"><b>Introduction</b></a>
+    <a href="games.html"><b>Games</b></a>
+    <a href="food.html"><b>Food</b></a>
 
-<h1>Introduction:</h1>
+    <h1>Introduction:</h1>
 
-<p> Hello, my name is Andrew Delos Reyes.<br>
-    I'm a Computer Science major attending CSUF, and it is my last semester here.<br>
-    I've been playing video games since I was five years old and still play them to this day.<br>
-    I like video games so much I've been practicing making my own games for about 2 years now.<br>
-    I hope to make a fully fleshed out high quality game that I can release on Steam as a way of giving back to the community.
-</p>
+
+    <img src="selfie.jpg" alt="me">
+    <dialog open>Welcome to my introduction</dialog>
+    <article>
+        <br />
+        <p> Hello, my name is <u>Andrew Delos Reyes</u> and I am 23 years old.<br />
+            I'm a Computer Science major attending CSUF, and it is my last semester here.<br />
+            I've been playing video games since I was <em>five years old</em> and still play them to this day.<br />
+            I like video games so much I've been practicing making my own games for about 2 years now.<br />
+            I hope to make a fully fleshed out high quality game that I can release on Steam as a way of giving back to the community.
+        </p>
+    </article>
+    
+    <table border="1" cellpadding="8">
+        <tr>
+            <th>My Coding Languages Proficiencies</th>
+        </tr>
+        <tr>
+            <td>C++</td>
+        </tr>
+        <tr>
+            <td>C#</td>
+        </tr>
+        <tr>
+
+            <td>C</td>
+        </tr>
+        <tr>
+
+            <td>Java</td>
+        </tr>
+        <tr>
+
+            <td>Python</td>
+        </tr>
+        <tr>
+
+            <td>HTML</td>
+        </tr>
+        <tr>
+
+            <td>PHP</td>
+        </tr>
+        <tr>
+
+            <td>SQL</td>
+        </tr> 
+    </table>
+
+    <br />
+    <h2>Contact Andrew:</h2>
+    <form action="index.html">
+        <label for="fname">First Name:</label>
+        <input type="text" id="fname" name="fname"><br />
+        <label for="lname">Last Name:</label>
+        <input type="text" id="lname" name="lname"><br />
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email"><br />
+    </form>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+        <button>Submit</button>
+    </a>
 
 </body>
+
 </html>
