Fixed errors and sadly had to put a real button.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <dialog open>Welcome to my introduction</dialog>
     <article>
         <br />
-        <p> Hello, my name is <u>Andrew Delos Reyes</u> and I am 23 years old.<br />
+        <p> Hello, my name is <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><u>Andrew Delos Reyes</u></a> and I am 23 years old.<br />
             I'm a Computer Science major attending CSUF, and it is my last semester here.<br />
             I've been playing video games since I was <em>five years old</em> and still play them to this day.<br />
             I like video games so much I've been practicing making my own games for about 2 years now.<br />
@@ -25,39 +25,33 @@
         </p>
     </article>
     
-    <table border="1" cellpadding="8">
+    <table> <!--Adding a border gives me an error in the html validator-->
         <tr>
-            <th>My Coding Languages Proficiencies</th>
+          <th>My Coding Languages Proficiencies</th>
         </tr>
         <tr>
-            <td>C++</td>
+          <td>C++</td>
         </tr>
         <tr>
-            <td>C#</td>
+          <td>C#</td>
         </tr>
         <tr>
-
-            <td>C</td>
+          <td>C</td>
         </tr>
         <tr>
-
-            <td>Java</td>
+          <td>Java</td>
         </tr>
         <tr>
-
-            <td>Python</td>
+          <td>Python</td>
         </tr>
         <tr>
-
-            <td>HTML</td>
+          <td>HTML</td>
         </tr>
         <tr>
-
-            <td>PHP</td>
+          <td>PHP</td>
         </tr>
         <tr>
-
-            <td>SQL</td>
+          <td>SQL</td>
         </tr> 
     </table>
 
@@ -70,11 +64,8 @@
         <input type="text" id="lname" name="lname"><br />
         <label for="email">Email:</label>
         <input type="text" id="email" name="email"><br />
+        <input type="submit" value="Submit">
     </form>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-        <button>Submit</button>
-    </a>
-
 </body>
 
 </html>
