--- a/games.html
+++ b/games.html
@@ -19,19 +19,19 @@
         <li>Terraria</li>
     </ol>
 
-    <h3><li>Dark Souls</li></h3>
+    <h3>Dark Souls</h3>
     <p>Great gameplay, great difficulty, free to go wherever, can see almost everything near the start.</p>
 
-    <h3><li>NieR: Automata</li></h3>
+    <h3>NieR: Automata</h3>
     <p>Great story, good and unique gameplay, great characters, and great music. Is the main inspiration for me wanting to make games.</p>
 
-    <h3><li>Destiny 2: Forsaken</li></h3>
+    <h3>Destiny 2: Forsaken</h3>
     <p>Specific time period of Destiny 2. Large amount of content, hidden content, great gameplay, solid story, also when I was one of the best players in the world for PVP.</p>
     
-    <h3><li>Elden Ring</li></h3>
+    <h3>Elden Ring</h3>
     <p>Great gameplay, first soulslike open world, decent difficulty.</p>
 
-    <h3><li>Terraria</li></h3>
+    <h3>Terraria</h3>
     <p>Can be relaxing, can be stressful, nice progression system, nice building system, good gameplay. Is not 2D Minecraft.</p>
 
     <h1>Other Great Games I Recommend</h1>
@@ -43,15 +43,15 @@
     </ul>
 
     <h1>Games with Great Music</h1>
-    <li>NieR: Automata</li>
+    <p>NieR: Automata</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/hMw-DUnR10s?si=UP7G4yjd9LoefaXr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <li><mark>Terraria</mark></li>
+    <p><mark>Terraria</mark></p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/HnnMRM0AaCM?si=yUM7YrCNCswx5GN-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <li>Genshin Impact</li>
+    <p>Genshin Impact</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/FYP2dM8RTFM?si=WUmxIzjNqGgAAGCf&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <li>Halo Series</li>
+    <p>Halo Series</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/vZ0ilR5G0zg?si=fvyIoDVRUCxMDWc8&amp;start=99" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <li><strong>Dark Souls Series</strong></li>
+    <p><strong>Dark Souls Series</strong></p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/LfqowXbejyo?si=n6iG5RVP0l88O0CQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
