Fixed errors on games.html

--- a/games.html
+++ b/games.html
@@ -39,8 +39,9 @@
         <li>Mass Effect Trilogy</li>
         <li>Halo Reach</li>
         <li>Hades</li>
-        <abbr title="The Legend of Zelda: Breath of the Wild"><li>BOTW</li></abbr>
+        
     </ul>
+    <p><abbr title="The Legend of Zelda: Breath of the Wild">BOTW</abbr></p>
 
     <h1>Games with Great Music</h1>
     <p>NieR: Automata</p>
