No more errors.

--- a/games.html
+++ b/games.html
@@ -45,17 +45,15 @@
 
     <h1>Games with Great Music</h1>
     <p>NieR: Automata</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/hMw-DUnR10s?si=UP7G4yjd9LoefaXr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <embed type="text/html" src="https://www.youtube.com/embed/hMw-DUnR10s?si=UP7G4yjd9LoefaXr" width="560" height="315">
     <p><mark>Terraria</mark></p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/HnnMRM0AaCM?si=yUM7YrCNCswx5GN-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <embed type="text/html" src="https://www.youtube.com/embed/HnnMRM0AaCM?si=yUM7YrCNCswx5GN-" width="560" height="315">
     <p>Genshin Impact</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/FYP2dM8RTFM?si=WUmxIzjNqGgAAGCf&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <embed type="text/html" src="https://www.youtube.com/embed/FYP2dM8RTFM?si=WUmxIzjNqGgAAGCf&amp;start=6" width="560" height="315">
     <p>Halo Series</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vZ0ilR5G0zg?si=fvyIoDVRUCxMDWc8&amp;start=99" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <embed type="text/html" src="https://www.youtube.com/embed/vZ0ilR5G0zg?si=fvyIoDVRUCxMDWc8&amp;start=99" width="560" height="315">
     <p><strong>Dark Souls Series</strong></p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/LfqowXbejyo?si=n6iG5RVP0l88O0CQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-
+    <embed type="text/html" src="https://www.youtube.com/embed/LfqowXbejyo?si=n6iG5RVP0l88O0CQ" width="560" height="315">
     <img src="VideoGameTierList.png" alt="GameList">
 
     
